# on-call-analysis

./: .gitignore  Analytics.ipynb  Clustering.ipynb  README.md  config.example  pyproject.toml
src/: cli.py  config.py
src/source/: pagerduty.py
