[tool.poetry]
name = "on-call-analysis"
version = "0.1.0"
description = ""
authors = ["Bianca Costache"]
readme = "README.md"
packages = [
    {include = "*", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
openpyxl = "^3.1.2"
msal = "^1.22.0"
microsoftgraph-python = "^1.1.6"
autocommand = "^2.2.2"
jupyterlab = "^4.0.2"
click = "^8.1.3"
configobj = "^5.0.8"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
lets-plot = "^3.2.0"
notebook = "^6.5.4"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
wordcloud = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oncall-analysis = 'cli:run'